# bsd

./: .editorconfig  CITATION.cff  CONTRIBUTING.md  README.md  default.nix  docker.nix  flake.nix  meson.build  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md  STALE-BOT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installer.md  missing_documentation.md
.github/workflows/: ci.yml  labels.yml
bsd-meson-build-support/big-objs/: meson.build
bsd-meson-build-support/deps-lists/: meson.build
bsd-meson-build-support/export/: meson.build
bsd-meson-build-support/export-all-symbols/: meson.build
contrib/: stack-collapse.py
doc/manual/: book.toml.in  generate-builtins.nix  generate-manpage.nix  generate-settings.bsd  generate-settings.nix  generate-store-info.nix  generate-store-types.nix  generate-xp-features-shortlist.nix  generate-xp-features.bsd  generate-xp-features.nix  meson.build  package.bsd  package.nix  redirects.js  remove_before_wrapper.py
maintainers/: README.md  backporting.md  flake-module.bsd  format.sh  onboarding.md  release-credits  release-notes  release-process.md  security-reports.md  upload-release.pl
misc/bash/: completion.sh  meson.build
misc/fish/: completion.fish  meson.build
misc/launchd/: meson.build  org.bsdos.bsd-daemon.plist.in
misc/systemd/: bsd-daemon.service.in  bsd-daemon.socket.in  meson.build
misc/systemv/: bsd-daemon
misc/upstart/: bsd-daemon.conf.in
misc/zsh/: completion.zsh  meson.build  run-help-bsd
packaging/: binary-tarball.nix  components.nix  dependencies.nix  dev-shell.nix  everything.nix  hydra.nix
packaging/installer/: default.bsd  install.in
scripts/: bigsur-bsdbld-user-migration.sh  bsd-profile-daemon.fish.in  bsd-profile-daemon.sh.in  bsd-profile.fish.in  bsd-profile.sh.in  build-checks  create-darwin-volume.sh  install-bsd-from-tarball.sh  install-darwin-multi-user.sh  install-multi-user.sh  install-systemd-multi-user.sh  meson.build  prepare-installer-for-github-actions  sequoia-bsdbld-user-migration.sh  serve-installer-for-github-actions
src/bsd/: add-to-store.cc  add.md  app.cc  bsd-build  bsd-channel  bsd-collect-garbage  bsd-copy-closure  bsd-env  bsd-instantiate  bsd-store  bsd.md  build.cc  build.md  bundle.cc  bundle.md  cat.cc  config-check.cc  config.cc  copy.cc  copy.md  crash-handler.cc  crash-handler.hh  derivation-add.cc  derivation-add.md  derivation-show.cc  derivation-show.md  derivation.cc  develop.cc  develop.md  diff-closures.cc  diff-closures.md  dump-path.cc  edit.cc  edit.md  env.cc  eval.cc  eval.md  flake-archive.md  flake-check.md  flake-clone.md  (+90 more)
src/bsd-build/: bsd-build.cc
src/bsd-channel/: bsd-channel.cc
src/bsd-collect-garbage/: bsd-collect-garbage.cc
src/bsd-copy-closure/: bsd-copy-closure.cc
src/bsd-env/: bsd-env.cc  user-env.cc  user-env.hh
src/bsd-instantiate/: bsd-instantiate.cc
src/bsd-store/: bsd-store.cc  dotgraph.cc  dotgraph.hh  graphml.cc  graphml.hh
src/bsd/realisation/: info.md
src/bsd/ubsd/: daemon.cc  daemon.md
src/build-remote/: build-remote.cc
src/external-api-docs/: README.md  doxygen.cfg.in  meson.build  package.nix
src/internal-api-docs/: doxygen.cfg.in  meson.build  package.nix
src/libcmd/: built-path.cc  command-installable-value.cc  command.cc  common-eval-args.cc  editor-for.cc  installable-attr-path.cc  installable-derived-path.cc  installable-flake.cc  installable-value.cc  installables.cc  markdown.cc  meson.build  meson.options  misc-store-flags.cc  network-proxy.cc  package.nix  repl-interacter.cc  repl.cc
src/libcmd/include/bsd/cmd/: built-path.hh  command-installable-value.hh  command.hh  common-eval-args.hh  compatibility-settings.hh  editor-for.hh  installable-attr-path.hh  installable-derived-path.hh  installable-flake.hh  installable-value.hh  installables.hh  legacy.hh  markdown.hh  misc-store-flags.hh  network-proxy.hh  repl-interacter.hh  repl.hh
src/libexpr/: attr-path.cc  attr-set.cc  bsdexpr.cc  eval-cache.cc  eval-error.cc  eval-gc.cc  eval-profiler-settings.cc  eval-profiler.cc  eval-settings.cc  eval.cc  (+18 more)
src/libexpr-c/: bsd_api_expr.cc  bsd_api_expr.h  bsd_api_expr_internal.h  bsd_api_external.cc  bsd_api_external.h  bsd_api_value.cc  bsd_api_value.h  meson.build  package.bsd
src/libexpr-test-support/: meson.build  package.nix
src/libexpr-tests/: bsd_api_expr.cc  bsd_api_external.cc  bsd_api_value.cc  derived-path.cc  error_traces.cc  eval.cc  json.cc  main.cc  meson.build  package.bsd  primops.cc  search-path.cc  trivial.cc
src/libexpr-tests/value/: context.cc  print.cc  value.cc
src/libfetchers-c/: bsd_api_fetchers.cc  bsd_api_fetchers.h  bsd_api_fetchers_internal.hh  meson.build  package.bsd
src/libfetchers-tests/: access-tokens.cc  bsd_api_fetchers.cc  git-utils.cc  meson.build  package.nix  public-key.cc
src/libflake/: call-flake.bsd  call-flake.nix  config.cc  flake-primops.cc  flake.cc  flakeref.cc  lockfile.cc  meson.build  package.bsd  package.nix  settings.cc  url-name.cc
src/libflake-tests/: bsd_api_flake.cc  flakeref.cc  meson.build  package.nix  url-name.cc
src/libflake/include/bsd/flake/: flake-primops.hh  flake.hh  flakeref.hh  lockfile.hh  settings.hh  url-name.hh
src/libmain/: common-args.cc  loggers.cc  meson.build  package.bsd  plugin.cc  progress-bar.cc  shared.cc
src/libmain-c/: bsd_api_main.cc  bsd_api_main.h  meson.build  package.bsd
src/libmain/include/bsd/main/: common-args.hh  loggers.hh  plugin.hh  progress-bar.hh  shared.hh
src/libmain/ubsd/: stack.cc
src/libstore-c/: bsd_api_store.cc  bsd_api_store.h  bsd_api_store_internal.h  meson.build  package.bsd
src/libutil-c/: bsd_api_util.cc  bsd_api_util.h  bsd_api_util_internal.h  meson.build  package.bsd
src/libutil/ubsd/: environment-variables.cc  file-descriptor.cc  file-path.cc  file-system.cc  meson.build  muxable-pipe.cc  os-string.cc  processes.cc  signals.cc  users.cc
src/libutil/ubsd/include/bsd/util/: monitor-fd.hh  signals-impl.hh
src/perl/lib/Bsd/: Config.pm.in  CopyClosure.pm  Manifest.pm  SSH.pm  Store.pm  Store.xs  Utils.pm  meson.build
tests/: repl-completion.bsd
(+1151 files in other folders)
