# vim: filetype=meson

option(
  'markdown',
  type: 'feature',
  description: 'Enable Markdown rendering in the Bsd binary (requires lowdown)',
)

option(
  'readline-flavor',
  type : 'combo',
  choices : ['editline', 'readline'],
  value : 'editline',
  description : 'Which library to use for nice line editing with the Bsd language REPL',
)
